小修、增加幻卡分享

--- a/plugins_cup.html
+++ b/plugins_cup.html
@@ -2,15 +2,15 @@
 <html lang="en">
 
 <head>
-    
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-4GK80CEHHB"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-    gtag('config', 'G-4GK80CEHHB');
+        gtag('config', 'G-4GK80CEHHB');
     </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -58,10 +58,10 @@
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">Sonar</h6>
                         <a href="https://discord.com/invite/K7y24Rr" class="btn btn-outline-secondary"
-                            role="button">Discord</a>
+                        target="_blank"  role="button">Discord</a>
                     </div>
                     <p>提示玩家回報的S/A怪物狩獵，支持FATE回報，並且可設定接收整個大區的通知還是當前的伺服器<br>
-                    ▶可選擇收到指定FATE通知
+                        ▶可選擇收到指定FATE通知
                     </p>
                     <img src="image/xl setting 09.jpg" alt="" class="img-fluid imagebigback">
                     <P>座標會顯示在指定聊天欄</P>
@@ -77,21 +77,26 @@
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">Triad Buddy</h6>
                         <a href="https://github.com/MgAl2O4/FFTriadBuddyDalamud" class="btn btn-outline-secondary"
-                            role="button">插件原網址</a>
+                        target="_blank" role="button">插件原網址</a>
+                        <a href="https://home.gamer.com.tw/creationDetail.php?sn=5381420"
+                         class="btn btn-outline-secondary ms-3"  target="_blank" role="button">巴哈詳細介紹</a>
                     </div>
                     <p>幻卡小抄</p>
-                    <img src="https://github.com/MgAl2O4/FFTriadBuddyDalamud/raw/main/assets/image1.png" alt="" class="img-fluid imagebigback">
+                    <img src="https://github.com/MgAl2O4/FFTriadBuddyDalamud/raw/main/assets/image1.png" alt=""
+                        class="img-fluid imagebigback">
                     <P>告訴你下一步該何去何從</P>
-                    <img src="https://github.com/MgAl2O4/FFTriadBuddyDalamud/raw/main/assets/image2.png" alt="" class="img-fluid imagebigback">
+                    <img src="https://github.com/MgAl2O4/FFTriadBuddyDalamud/raw/main/assets/image2.png" alt=""
+                        class="img-fluid imagebigback">
                     <P>使用你現有的卡牌幫你組合最優選</P>
-                    <img src="https://github.com/MgAl2O4/FFTriadBuddyDalamud/raw/main/assets/image3.png" alt="" class="img-fluid imagebigback">
+                    <img src="https://github.com/MgAl2O4/FFTriadBuddyDalamud/raw/main/assets/image3.png" alt=""
+                        class="img-fluid imagebigback">
                     <P>告訴你卡片要去哪裡拿，點選按鈕幫你插旗</P>
                 </div>
                 <div class="commonFormat mt-5" id="Tourist">
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">Tourist</h6>
                         <a href="https://git.annaclemens.io/ascclemens/Tourist" class="btn btn-outline-secondary"
-                            role="button">插件原網址</a>
+                        target="_blank" role="button">插件原網址</a>
                     </div>
                     <p>探索筆記解答+插旗</p>
                 </div>
@@ -99,19 +104,18 @@
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">DailyDuty</h6>
                         <a href="https://github.com/MidoriKami/DailyDuty" class="btn btn-outline-secondary"
-                            role="button">插件原網址</a>
+                        target="_blank" role="button">插件原網址</a>
                     </div>
                     <p>日常任務提醒小助手</p>
-                    <img src="https://user-images.githubusercontent.com/9083275/154887762-1ee6eea4-c292-422c-af42-5dfa144e5744.png" alt="" class="img-fluid imagebigback">
+                    <img src="https://user-images.githubusercontent.com/9083275/154887762-1ee6eea4-c292-422c-af42-5dfa144e5744.png"
+                        alt="" class="img-fluid imagebigback">
                     <p class="mt-3">目前有的分類</p>
                     <div class="row">
-                        <div class="col-md-6 text-center">
-                            <a href="image/daily01.jpg" target="_blank">
-                                <img src="image/daily01.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
+                        <div class="col-md-6">
+                            <img src="image/daily01.jpg" alt="" class="img-fluid mb-2 imgnoJq" max-width="100%">
                         </div>
-                        <div class="col-md-6 text-center">
-                            <a href="image/daily02.jpg" target="_blank">
-                                <img src="image/daily02.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
+                        <div class="col-md-6">
+                            <img src="image/daily02.jpg" alt="" class="img-fluid mb-2 imgnoJq" max-width="100%">
                         </div>
                     </div>
                     <img src="image/daily03.jpg" alt="" class="img-fluid imagebigback">
