新增小廢物頁面、微調首頁功能卡

--- a/plugins_song.html
+++ b/plugins_song.html
@@ -59,6 +59,12 @@
                         <h6 class="fs-4 d-inline mb-0 me-3">Simple Tweaks</h6>
                         <a href="https://github.com/Caraxi/SimpleTweaksPlugin" class="btn btn-outline-secondary" target="_blank" role="button">插件原網址</a>
                     </div>
+                    <label for="basic-url" class="form-label">防止亂碼可以添加Akira的第三方插件庫URL</label>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" value="https://raw.githubusercontent.com/akira0245/DalamudPlugins/api4/pluginmaster.json" id="myInput" aria-describedby="basic-addon2">
+                        <button onclick="myFunction()"  class="input-group-text " id="basic-addon2">複製</button>
+                      </div>
+                    <p><a href="https://github.com/Caraxi/SimpleTweaksPlugin">安裝方法</a>，安裝後搜尋列表DalamudFontReplacer</p>
                     <p>便利小插件合集，<a href="https://github.com/Caraxi/SimpleTweaksPlugin">部分使用說明(插件網址)</a>，幾個個人認為比較實用的</p>
                     <ul>
                         <li>增加試穿畫面縮放程度</li>
