小修手機版

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <!-- 功能介紹卡片 -->
             <div class="row mx-auto col-lg-10 justify-content-center py-5 function">
 
-                <div class="card col-md-3 shadow-sm" data-aos="flip-left">
+                <div class="card col-md-2 col-5 shadow-sm" data-aos="flip-left">
                     <i class="bi bi-menu-button-wide-fill text-center mt-3 fs-1"></i>
                     <div class="card-header">
                         <h5 class="card-title my-2">UI優化</h5>
@@ -101,7 +101,7 @@
                     </ul>
                 </div>
 
-                <div class="card col-md-3 shadow-sm" data-aos="flip-left">
+                <div class="card col-md-2 col-5  shadow-sm" data-aos="flip-left">
                     <i class="bi bi-shield-shaded text-center mt-3 fs-1"></i>
                     <div class="card-header">
                         <h5 class="card-title my-2">戰鬥輔助</h5>
@@ -114,7 +114,7 @@
                         <li class="list-group-item"><a href="plugins_att.html#GentleTouch">手把震動</a></li>
                     </ul>
                 </div>
-                <div class="card col-md-3 shadow-sm" data-aos="flip-left">
+                <div class="card col-md-2 col-5  shadow-sm" data-aos="flip-left">
                     <i class="bi bi-ui-checks text-center mt-3 fs-1"></i>
                     <div class="card-header">
                         <h5 class="card-title my-2">改善遊戲體驗</h5>
@@ -128,7 +128,7 @@
                         <li class="list-group-item"><a href="plugins_song.html#BDTH">自訂家具位置</a></li>
                     </ul>
                 </div>
-                <div class="card col-md-3 shadow-sm" data-aos="flip-left">
+                <div class="card col-md-2 col-5  shadow-sm" data-aos="flip-left">
                     <i class="bi bi-pin-map-fill text-center mt-3 fs-1"></i>
                     <div class="card-header">
                         <h5 class="card-title my-2">地圖輔助</h5>
@@ -140,7 +140,7 @@
                         <li class="list-group-item"><a href="plugins_map.html#Teleporter">座標傳送</a></li>
                     </ul>
                 </div>
-                <div class="card col-md-3 shadow-sm" data-aos="flip-left">
+                <div class="card col-md-3 col-5  shadow-sm" data-aos="flip-left">
                     <i class="bi bi-trophy-fill text-center mt-3 fs-1"></i>
                     <div class="card-header">
                         <h5 class="card-title my-2">成就懶人</h5>
@@ -152,7 +152,7 @@
                         <li class="list-group-item"><a href="plugins_cup.html#DailyDuty">日常任務提醒</a></li>
                     </ul>
                 </div>
-                <div class="card col-md-3 shadow-sm" data-aos="flip-left">
+                <div class="card col-md-3 col-5  shadow-sm" data-aos="flip-left">
                     <i class="bi bi-hand-thumbs-up-fill text-center mt-3 fs-1"></i>
                     <div class="card-header">
                         <h5 class="card-title my-2">有點廢但很酷的小功能</h5>
