--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <h5 class="card-title my-2">改善遊戲體驗</h5>
                     </div>
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item"><a href="plugins_song.html#simpleTweaks">實用設定合集</a></li>
+                        <li class="list-group-item"><a href="plugins_tweak.html">實用設定合集</a></li>
                         <li class="list-group-item"><a href="plugins_song.html#ezFauxHollows">幻想盤、刮刮樂明牌</a></li>
                         <li class="list-group-item"><a href="plugins_song.html#ezWondrousTails">空想帳機率計算</a></li>
                         <li class="list-group-item"><a href="plugins_song.html#market">交易版查價</a></li>
