--- a/plugins_song.html
+++ b/plugins_song.html
@@ -36,10 +36,10 @@
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="css/fix.css">
     <link href="css/all.css" rel="stylesheet">
 
-    <title>亞馬烏羅提後花園</title>
+    <title>亞馬烏羅提後花園｜便利功能</title>
 </head>
 
 
@@ -54,61 +54,6 @@
 
             <!-- 文章內容 -->
             <div class="col-md-8 col-lg-9 my-sm-5 px-5 imagebig">
-                <div class="commonFormat mt-5" id="simpleTweaks">
-                    <div class="plugintitle d-flex align-items-center mb-3">
-                        <h6 class="fs-4 d-inline mb-0 me-3">Simple Tweaks</h6>
-                        <a href="https://github.com/Caraxi/SimpleTweaksPlugin" class="btn btn-outline-secondary" target="_blank" role="button">插件原網址</a>
-                    </div>
-                    <label for="basic-url" class="form-label">防止亂碼可以添加Akira的第三方插件庫URL</label>
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" value="https://raw.githubusercontent.com/akira0245/DalamudPlugins/api4/pluginmaster.json" id="myInput" aria-describedby="basic-addon2">
-                        <button onclick="myFunction()"  class="input-group-text " id="basic-addon2">複製</button>
-                      </div>
-                    <p><a href="https://github.com/Caraxi/SimpleTweaksPlugin">安裝方法</a>，安裝後搜尋列表DalamudFontReplacer</p>
-                    <p>便利小插件合集，<a href="https://github.com/Caraxi/SimpleTweaksPlugin">部分使用說明(插件網址)</a>，幾個個人認為比較實用的</p>
-                    <ul>
-                        <li>增加試穿畫面縮放程度</li>
-                        <li>副本結束自動打開點讚畫面</li>
-                        <li>生產系技能放同個位置</li>
-                        <li>聊天中的網址可點擊</li>
-                        <li>滑鼠懸停可直接複製物品名稱</li>
-                        <li>滑步提示</li>
-                        <li>精簡伺服器選單</li>
-                        <li>顯示經驗百分比</li>
-                    </ul>
-
-
-                    <div class="row">
-                        <div class="col-md-6 text-center">
-                            <a href="image/tweak01.jpg" target="_blank">
-                                <img src="image/tweak01.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
-                        </div>
-                        <div class="col-md-6 text-center">
-                            <a href="image/tweak02.jpg" target="_blank">
-                                <img src="image/tweak02.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
-                        </div>
-                        <div class="col-md-6 text-center">
-                            <a href="image/tweak03.jpg" target="_blank">
-                                <img src="image/tweak03.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
-                        </div>
-                        <div class="col-md-6 text-center">
-                            <a href="image/tweak07.jpg" target="_blank">
-                                <img src="image/tweak07.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
-                        </div>
-                        <div class="col-md-6 text-center">
-                            <a href="image/tweak04.jpg" target="_blank">
-                                <img src="image/tweak04.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
-                        </div>
-                        <div class="col-md-6 text-center">
-                            <a href="image/tweak05.jpg" target="_blank">
-                                <img src="image/tweak05.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
-                        </div>
-                        <div class="col-md-6 text-center">
-                            <a href="image/tweak06.jpg" target="_blank">
-                                <img src="image/tweak06.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
-                        </div>
-                    </div>
-                </div>
                 <div class="commonFormat mt-5" id="ezFauxHollows">
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">ezFauxHollows</h6>
@@ -170,8 +115,7 @@
                         <a href="https://github.com/LeonBlade/DalamudPlugins" class="btn btn-outline-secondary"
                         target="_blank" role="button">插件原網址</a>
                     </div>
-                    <p>自訂家具位置，此插件需從第三方插件庫加載，詳細請見<a href="index.html#headingThree" target="_blank"
-                            class="moreplugin">安裝方法</a>
+                    <p>自訂家具位置，此插件需從第三方插件庫加載，詳細請見<a href="index.html#headingThree" target="_blank" class="moreplugin">安裝方法</a>
                     </p>
                     <label for="basic-url" class="form-label">第三方插件庫URL</label>
                     <div class="input-group mb-3">
