--- a/plugins_ui.html
+++ b/plugins_ui.html
@@ -37,10 +37,10 @@
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="css/fix.css">
     <link href="css/all.css" rel="stylesheet">
 
-    <title>亞馬烏羅提後花園</title>
+    <title>亞馬烏羅提後花園｜UI功能相關</title>
 
 
 </head>
@@ -135,8 +135,9 @@
                     <p class="fs-5 text-muted fw-bold mt-3">Shortcut設定</p>
                     <img src="image/qol03.jpg" alt=""      class="img-fluid imagebigback">
                     <p>▶Name－"::"後面的數字是icon編號，點右下角放大鏡可以打開icon資源庫，後面加"##"(顯示的名稱)滑鼠移入可顯示提示<br>
-                    ▶Mode－Command類似寫巨集的地方，可以寫指令，右鍵可以添加遊戲內特殊符號<br>
+                    ▶Command－類似寫巨集的地方，可以寫指令，右鍵可以添加遊戲內特殊符號<br>
                     另外可以使用"//m巨集的編號"來快捷使用巨集，如果要使用角色共享巨集，需要+100，例如要使用共享MACRO#0，則需要輸入"//m100"<br>
+                    ▶Mode－Command執行的方式（應該）<br>
                     ▶旁邊兩個頁籤－Category是下拉選單才有的設定，可以調整選單寬度、一行幾個、大小間距，下面的選項Hover=滑鼠移入時，可以設定點選打開或滑入打開/關閉，跟不要背景；Icon就是外觀微調</p>
                     <p class="fs-5 text-muted fw-bold mt-3">巨集指令</p>
                     <table class="table table-hover">
