--- a/plugins_cool.html
+++ b/plugins_cool.html
@@ -38,10 +38,10 @@
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="css/fix.css">
     <link href="css/all.css" rel="stylesheet">
 
-    <title>亞馬烏羅提後花園</title>
+    <title>亞馬烏羅提後花園｜無用小功能</title>
 
 
 </head>
