--- a/plugins_tweak.html
+++ b/plugins_tweak.html
@@ -68,11 +68,12 @@
                         <button onclick="myFunction()" class="input-group-text " id="basic-addon2">複製</button>
                     </div>
                     <p><a href="index.html#headingThree" target="_blank">安裝方法</a>，安裝後搜尋列表DalamudFontReplacer<br>
-                        便利小插件合集，<a href="https://github.com/Caraxi/SimpleTweaksPlugin">部分使用說明(插件網址)</a></p>
+                    便利小插件合集，<a href="https://github.com/Caraxi/SimpleTweaksPlugin">部分使用說明(插件網址)</a><br>
+                    這插件怎麼一直在更新阿更新不完！！</p>
                     <p></p>
 
                     <div class="tweak_table py-4">
-                        <h5 class="tweaktitle">插件功能總覽✦一般調整</h5>
+                        <h5 class="tweaktitle mb-4">插件功能總覽✦一般調整</h5>
                         <table class="table table-sm table-hover">
                             <thead>
                                 <tr>
@@ -104,7 +105,146 @@
                                 </tr>
                                 <tr>
                                     <th scope="row">5</th>
-                                    <td><a href="#tweak05">Data Center on Title Screen</a></td>
+                                    <td>Data Center on Title Screen</td>
+                                    <td>在標題畫面顯示當前大區</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">6</th>
+                                    <td>禁用目標選中</td>
+                                    <td>可以禁用滑鼠左/右鍵點擊選中目標的功能</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">7</th>
+                                    <td>Disable Mount Music Volume Change</td>
+                                    <td>坐騎沒有移動時繼續撥放音樂</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">8</th>
+                                    <td>禁用開場動畫</td>
+                                    <td>禁用在主界面閒置過久時會撥放的開場動畫</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">9</th>
+                                    <td>修復/target 命令</td>
+                                    <td>允許使用/target 命令選中玩家角色或NPC</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">10</th>
+                                    <td>固定影子距離</td>
+                                    <td>設定影子距離的值以防止其在飛行中變化</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">11</th>
+                                    <td>Hide Mouse Cursor After Inactivity</td>
+                                    <td>不活動時隱藏滑鼠</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">12</th>
+                                    <td>Improved Crafting Log</td>
+                                    <td>修改製作日誌中的合成按鈕以切換工作或從製作位置站起來，允許您在不關閉製作日誌的情況下停止製作。</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">13</th>
+                                    <td>增加角色預覽縮放距離</td>
+                                    <td>增加角色預覽的縮放距離，比如“試穿”和“調查”</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">14</th>
+                                    <td>顯示婚禮長頭紗</td>
+                                    <td>婚禮頭紗顯示加長版本</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">15</th>
+                                    <td>快捷指令命令</td>
+                                    <td>在宏和聊天頻道中，使用'/maincommand[name]來執行任意的快捷指令</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">16</th>
+                                    <td>更多套装槽位</td>
+                                    <td>增加可儲存的裝備套裝數量到100</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">17</th>
+                                    <td>Open commendation window automatically</td>
+                                    <td>副本結束自動打開點讃畫面</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">18</th>
+                                    <td>自動打開戰利品分配窗口</td>
+                                    <td>當在副本內有獲得新物品時,自動打開戰利品分配窗口。</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">19</th>
+                                    <td>聊天框快捷指令</td>
+                                    <td>添加數個聊天框指令以快速修改遊戲設置</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">20</th>
+                                    <td>Show process id Command</td>
+                                    <td>顯示當前進程ID</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">21</th>
+                                    <td>Sync Crafter Bars</td>
+                                    <td>讓相同效果的生產系技能放同一位置</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">22</th>
+                                    <td>Sync Gatherer Bars</td>
+                                    <td>讓相同效果的礦工園藝技能放同一位置</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">23</th>
+                                    <td>Try On Correct Item</td>
+                                    <td>按住Shift試穿投影前的物品</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-6 tweakFormat" id="tweak05">
+                            <p class="mb-1">#5 Data Center on Title Screen</p>
+                            <img src="image/normal-5.png" alt="" class="img-fluid mb-2 imgnoJq">
+                        </div>
+                        <div class="col-md-6">
+                            <p class="mb-1">#23 Try On Correct Item</p>
+                                <img src="image/normal-23.jpg" alt="" class="img-fluid mb-2 imgnoJq">
+                    </div>
+                    <!-- <div class="tweak_table py-4">
+                        <h5 class="tweaktitle mb-4">插件功能總覽✦一般調整</h5>
+                        <table class="table table-sm table-hover">
+                            <thead>
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">功能</th>
+                                    <th scope="col">介紹</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">1</th>
+                                    <td>Auto Lock Action Bars</td>
+                                    <td>自動鎖定快捷欄</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">2</th>
+                                    <td>角色文件夾命令</td>
+                                    <td>添加命令以顯示或打開本地角色文件夾</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">3</th>
+                                    <td>Character Window Job Switcher</td>
+                                    <td>角色職業等級介面可點擊切換裝備，生產系不生效</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">4</th>
+                                    <td>自定義同義命令</td>
+                                    <td>創建聊天欄命令的別稱以方便輸入</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">5</th>
+                                    <td>Data Center on Title Screen</td>
                                     <td>在標題畫面顯示當前大區</td>
                                 </tr>
                                 <tr>
@@ -195,11 +335,18 @@
                             </tbody>
                         </table>
                     </div>
-
                     <div class="row">
                         <div class="col-md-6 tweakFormat" id="tweak05">
-                                <img src="image/data center on title.png" alt="" class="img-fluid mb-2 imgnoJq">
-                            <p>#5 Data Center on Title Screen</p>
+                            <p class="mb-1">#5 Data Center on Title Screen</p>
+                            <img src="image/normal-5.png" alt="" class="img-fluid mb-2 imgnoJq">
+                        </div>
+                        <div class="col-md-6">
+                            <p class="mb-1">#23 Try On Correct Item</p>
+                                <img src="image/normal-23.jpg" alt="" class="img-fluid mb-2 imgnoJq">
+                        </div>
+                        <div class="col-md-6 text-center">
+                            <a href="image/tweak01.jpg" target="_blank">
+                                <img src="image/tweak01.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
                         </div>
                         <div class="col-md-6 text-center">
                             <a href="image/tweak02.jpg" target="_blank">
@@ -225,7 +372,7 @@
                             <a href="image/tweak06.jpg" target="_blank">
                                 <img src="image/tweak06.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
