--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         <li class="list-group-item"><a href="plugins_map.html#Teleporter">座標傳送</a></li>
                     </ul>
                 </div>
-                <div class="card col-md-3 col-5  shadow-sm" data-aos="flip-left">
+                <div class="card col-md-3 col-5  shadow-sm" data-aos="flip-left" data-aos-offset="10">
                     <i class="bi bi-trophy-fill text-center mt-3 fs-1"></i>
                     <div class="card-header">
                         <h5 class="card-title my-2">成就懶人</h5>
@@ -152,7 +152,7 @@
                         <li class="list-group-item"><a href="plugins_cup.html#DailyDuty">日常任務提醒</a></li>
                     </ul>
                 </div>
-                <div class="card col-md-3 col-5  shadow-sm" data-aos="flip-left">
+                <div class="card col-md-3 col-5  shadow-sm" data-aos="flip-left" data-aos-offset="10">
                     <i class="bi bi-hand-thumbs-up-fill text-center mt-3 fs-1"></i>
                     <div class="card-header">
                         <h5 class="card-title my-2">有點廢但很酷的小功能</h5>
