增加採集助手、修一下版面

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                         <li class="list-group-item"><a href="plugins_ui.html#chatBubbles">顯示頭頂氣泡</a></li>
                         <li class="list-group-item"><a href="plugins_ui.html#Visibility">隱藏其他玩家</a></li>
                         <li class="list-group-item"><a href="plugins_ui.html#Glamaholic">解放投影模板</a></li>
-                        <li class="list-group-item"><a href="plugins_ui.html#GoodMemory">物品解鎖備註</a></li>
-                        <li class="list-group-item"><a href="plugins_ui.html#qolbar">解放快捷欄</a></li>
+                        <li class="list-group-item"><a href="plugins_ui.html#GoodMemory">物品解鎖備註★</a></li>
+                        <li class="list-group-item"><a href="plugins_ui.html#qolbar">解放快捷欄★★</a></li>
                     </ul>
                 </div>
 
@@ -108,9 +108,9 @@
                     </div>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item"><a href="plugins_att.html#combo">技能Combo</a></li>
-                        <li class="list-group-item"><a href="plugins_att.html#BigPlayerDebuffs">放大自己dot</a></li>
-                        <li class="list-group-item"><a href="plugins_att.html#RezPls">屍體有誰拉</a></li>
-                        <li class="list-group-item"><a href="plugins_att.html#Waymark">標點儲存</a></li>
+                        <li class="list-group-item"><a href="plugins_att.html#BigPlayerDebuffs">放大自己dot★★</a></li>
+                        <li class="list-group-item"><a href="plugins_att.html#RezPls">屍體有誰拉★</a></li>
+                        <li class="list-group-item"><a href="plugins_att.html#Waymark">標點儲存★★★</a></li>
                         <li class="list-group-item"><a href="plugins_att.html#GentleTouch">手把震動</a></li>
                     </ul>
                 </div>
@@ -120,10 +120,10 @@
                         <h5 class="card-title my-2">改善遊戲體驗</h5>
                     </div>
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item"><a href="plugins_tweak.html">實用設定合集</a></li>
+                        <li class="list-group-item"><a href="plugins_tweak.html">實用設定合集★★★★</a></li>
                         <li class="list-group-item"><a href="plugins_song.html#ezFauxHollows">幻想盤、刮刮樂明牌</a></li>
                         <li class="list-group-item"><a href="plugins_song.html#ezWondrousTails">空想帳機率計算</a></li>
-                        <li class="list-group-item"><a href="plugins_song.html#market">交易版查價</a></li>
+                        <li class="list-group-item"><a href="plugins_song.html#market">交易版查價★</a></li>
                         <li class="list-group-item"><a href="plugins_song.html#Housemate">顯示家具名稱</a></li>
                         <li class="list-group-item"><a href="plugins_song.html#BDTH">自訂家具位置</a></li>
                     </ul>
@@ -135,9 +135,9 @@
                     </div>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item"><a href="plugins_map.html#ChatCoordinates">指令插旗</a></li>
-                        <li class="list-group-item"><a href="plugins_map.html#Globetrotter">找寶洞</a></li>
+                        <li class="list-group-item"><a href="plugins_map.html#Globetrotter">找寶洞★★</a></li>
                         <li class="list-group-item"><a href="plugins_map.html#MapLinker">紀錄講過的座標</a></li>
-                        <li class="list-group-item"><a href="plugins_map.html#Teleporter">座標傳送</a></li>
+                        <li class="list-group-item"><a href="plugins_map.html#Teleporter">座標傳送★★</a></li>
                     </ul>
                 </div>
                 <div class="card col-md-3 col-5  shadow-sm" data-aos="flip-left" data-aos-offset="10">
@@ -146,10 +146,11 @@
                         <h5 class="card-title my-2">成就懶人</h5>
                     </div>
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item"><a href="plugins_cup.html#sonar">找S/A怪</a></li>
-                        <li class="list-group-item"><a href="plugins_cup.html#TriadBuddy">幻卡小抄</a></li>
+                        <li class="list-group-item"><a href="plugins_cup.html#sonar">找S/A怪★★</a></li>
+                        <li class="list-group-item"><a href="plugins_cup.html#TriadBuddy">幻卡小抄★</a></li>
                         <li class="list-group-item"><a href="plugins_cup.html#Tourist">探索筆記解答</a></li>
-                        <li class="list-group-item"><a href="plugins_cup.html#DailyDuty">日常任務提醒</a></li>
+                        <li class="list-group-item"><a href="plugins_cup.html#DailyDuty">日常任務提醒★</a></li>
+                        <li class="list-group-item"><a href="plugins_cup.html#Gather">採集助手★★★</a></li>
                     </ul>
                 </div>
                 <div class="card col-md-3 col-5  shadow-sm" data-aos="flip-left" data-aos-offset="10">
@@ -180,14 +181,14 @@
                             <div class="mx-auto text-center">
                                 <a href="image/xl install 01.jpg" target="_blank"><img src="image/xl install 01.jpg"
                                         class="img-fluid border rounded-3 mb-3" alt="" loading="lazy" width="600"></a>
-                                <p class="mb-5 mx-5">點擊連結後再點選最上面日期的紅框處exe檔案，安裝，有跳出更新視窗確定即可。</p>
+                                <p class="mb-5 mx-sm-5">點擊連結後再點選最上面日期的紅框處exe檔案，安裝，有跳出更新視窗確定即可。</p>
                                 <a href="image/xl install 02.jpg" target="_blank"><img src="image/xl install 02.jpg"
                                         class="img-fluid border rounded-3 mb-3" alt="" loading="lazy"></a>
-                                <p class="mb-5 mx-5">
+                                <p class="mb-5 mx-sm-5">
                                     選擇包含game和boot的遊戲路徑，他不會自動幫你偵測，有安裝在D槽的人記得更改路徑，steam版本要勾選下面選項，剩下基本上一直下一步就好。</p>
                                 <a href="image/xl install 03.jpg" target="_blank"><img src="image/xl install 03.jpg"
                                         class="img-fluid border rounded-3 mb-3" alt="" loading="lazy"></a>
-                                <p class="mb-5 mx-5">紅框處可以記憶其他帳號，如果勾選自動登入，Loading畫面按住Shift即可</p>
+                                <p class="mb-5 mx-sm-5">紅框處可以記憶其他帳號，如果勾選自動登入，Loading畫面按住Shift即可</p>
                             </div>
                         </div>
                     </div>
@@ -209,7 +210,7 @@
                                 <p class="mx-5">外觀設定</p>
                                 <a href="image/xl setting 02.jpg" target="_blank"><img src="image/xl setting 02.jpg"
                                         class="img-fluid border rounded-3 mb-3" alt="" loading="lazy" width="700"></a>
-                                <p class="mx-5">後面兩個一個是頂部的bar，遊戲內可使用"/xldev"呼叫出一個頂部控制bar，最後一個標籤是使用正在測試中未上架的插件。</p>
+                                <p class="mx-sm-5">後面兩個一個是頂部的bar，遊戲內可使用"/xldev"呼叫出一個頂部控制bar，最後一個標籤是使用正在測試中未上架的插件。</p>
                             </div>
                         </div>
                     </div>
@@ -225,16 +226,16 @@
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                             <div class="mx-auto text-center">
-                                <p class="mx-5">安裝插件版程式前，請先確認是否有安裝同作者同功能的獨立版程式，<a
+                                <p class="mx-sm-5">安裝插件版程式前，請先確認是否有安裝同作者同功能的獨立版程式，<a
                                         href="https://github.com/LeonBlade/DalamudPlugins">詳細請見此</a><br>
                                     確保在啟動器設置中打開“啟用遊戲內功能”以訪問遊戲內命令和功能！(可使用"/xlplugins"等指令)</p>
                                 <a href="image/moreplugins01.jpg" target="_blank"><img src="image/moreplugins01.jpg"
                                         class="img-fluid border rounded-3 mb-3" alt="" loading="lazy" width="700"></a>
-                                <p class="mx-5">到Dalamud設定介面的最後一個標籤頁，URL的地方貼上第三方程式庫的位址，按一下"+"<br>
+                                <p class="mx-sm-5">到Dalamud設定介面的最後一個標籤頁，URL的地方貼上第三方程式庫的位址，按一下"+"<br>
                                     Enabled那欄會變成"√"</p>
                                 <a href="image/moreplugins02.jpg" target="_blank"><img src="image/moreplugins02.jpg"
                                         class="img-fluid border rounded-3 mb-3" alt="" loading="lazy" width="700"></a>
-                                <p class="mx-5">回到插件管理頁面，會發現多了新增的插件，此時需要點擊安裝，即可使用。</p>
+                                <p class="mx-sm-5">回到插件管理頁面，會發現多了新增的插件，此時需要點擊安裝，即可使用。</p>
                             </div>
                         </div>
                     </div>
