--- a/plugins_att.html
+++ b/plugins_att.html
@@ -57,15 +57,15 @@
             <script src="plugins_menu.js"></script>
 
             <!-- 文章內容 -->
-            <div class="col-md-8 col-lg-9 my-sm-5 px-5 imagebig">
+            <div class="col-md-8 col-lg-9 my-sm-5 px-4 px-sm-5 imagebig">
                 <div class="commonFormat mt-5" id="combo">
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">XIV Combo Plugin</h6>
                         <a href="https://github.com/attickdoor/XivComboPlugin" class="btn btn-outline-secondary"
                             role="button">插件原網址</a>
                     </div>
-                    <p>讓連續的技能放在同一個技能欄中，改成combo模式<br>
-                    職業分開設定，可自行勾選哪個技能要使用這個效果<br>
+                    <p>讓連續的技能放在同一個技能欄中，改成combo模式。
+                    職業分開設定，可自行勾選哪個技能要使用這個效果。<br>
                     例如Draw on Play可以讓抽牌跟發牌使用同一個按鍵，快捷欄圖案會變成5抽牌的圖案。</p>
                     <img src="image/xl setting 06.jpg" alt="" class="img-fluid imagebigback">
                 </div>
