--- a/plugins_map.html
+++ b/plugins_map.html
@@ -53,7 +53,7 @@
             <script src="plugins_menu.js"></script>
 
             <!-- 文章內容 -->
-            <div class="col-md-8 col-lg-9 my-sm-5 px-5 imagebig">
+            <div class="col-md-8 col-lg-9 my-sm-5 px-4 px-sm-5 imagebig">
                 <div class="commonFormat mt-5" id="ChatCoordinates">
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">ChatCoordinates</h6>
