--- a/plugins_cup.html
+++ b/plugins_cup.html
@@ -53,7 +53,7 @@
             <script src="plugins_menu.js"></script>
 
             <!-- 文章內容 -->
-            <div class="col-md-8 col-lg-9 my-sm-5 px-5 imagebig">
+            <div class="col-md-8 col-lg-9 my-sm-5 px-4 px-sm-5 imagebig">
                 <div class="commonFormat mt-5" id="sonar">
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">Sonar</h6>
@@ -124,6 +124,36 @@
                     <p>隨機任務列表</p>
                     <img src="image/daily05.jpg" alt="" class="img-fluid imagebigback">
                     <p>小窗設定</p>
+                </div>
+                <div class="commonFormat mt-5" id="Gather">
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">GatherBuddy</h6>
+                        <a href="https://github.com/Ottermandias/GatherBuddy" class="btn btn-outline-secondary"
+                        target="_blank" role="button">插件原網址</a>
+                    </div>
+                    <p>包含採集系三種職業限刻、隱藏、天氣條件、魚餌查詢功能，點擊名稱可以直接傳送最近傳點，外部網站上可以查到的資料這插件幾乎都有</p>
+                    <img src="image/gather01.jpg"
+                        alt="" class="img-fluid imagebigback">
+                    <p class="mt-3">通用設定</p>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <a href="image/gather02.jpg" target="_blank">
+                            <img src="image/gather02.jpg" alt="" class="img-fluid mb-2 imgnoJq" max-width="100%"></a>
+                        </div>
+                        <div class="col-md-6">
+                            <a href="image/gather03.jpg" target="_blank">
+                            <img src="image/gather03.jpg" alt="" class="img-fluid mb-2 imgnoJq" max-width="100%"></a>
+                        </div>
+                        <div class="col-md-6">
+                            <a href="image/gather03-2.jpg" target="_blank">
+                            <img src="image/gather03-2.jpg" alt="" class="img-fluid mb-2 imgnoJq" max-width="100%"></a>
+                        </div>
+                    </div>
+                    <p class="mt-3">插件小窗提醒（三種職業共用）</p>
+                    <img src="image/gather04.jpg" alt="" class="img-fluid imagebigback">
+                    <p>有聲音提醒，基本上就是複製要監控的名稱添加就好了</p>
+                    <img src="image/gather05.jpg" alt="" class="img-fluid imagebigback">
+                    <p>釣魚時間軸：拋下魚餌時出現該地區魚種，用於紀錄拋鉤幾秒後那些魚會上鉤</p>
                 </div>
             </div>
         </div>
